Tidy up DAB naming and config internals